--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-dom": "^16.13.1",
     "react-pdf": "^4.1.0",
     "react-router-dom": "^5.2.0",
+    "react-scripts": "^3.4.1",
     "reactjs-popup": "^1.5.0",
     "webpack-dev-server": "^3.11.0"
   }
